Fixed products overlap issue with breakpoint

--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -35,9 +35,13 @@
 
   .drink {
     .product-tile {
-      padding: .5rem;
+      padding: 15px;
       height: 10rem;
       text-align: left;
+
+      @include breakpoint(small){
+        min-height: 13rem; 
+      }
       
       h3 {
         font-family: 'Pathway Gothic One', cursive;
@@ -65,10 +69,14 @@
   
   .food{
     .product-tile {
-      padding: .5rem;
+      padding: 15px;
       height: 10rem;
       text-align: right;
       
+      @include breakpoint(small){
+        min-height: 13rem; 
+      }
+
       h3 {
         font-family: 'Pathway Gothic One', cursive;
         font-size: 2rem;
@@ -87,7 +95,6 @@
       p {
         font-size: 1.1rem;
         font-family: 'Roboto Slab';
-        padding: 0;
         letter-spacing: .6px;
       }
     }
